--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,30 @@
+# Application name
 spring.application.name=projects
+
+# DevTools
 spring.devtools.livereload.enabled=false
+
+# Swagger UI
 springdoc.swagger-ui.enabled=true
+
+# Error handling
 server.error.include-stacktrace=never
+
+# Logging
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-server.servlet.context-path=/api
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/projects
+spring.datasource.username=${MYSQL_USER:projects}
+spring.datasource.password=${MYSQL_PASSWORD:projects}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Hibernate Configuration
+
+#Configures Hibernate to update the database schema automatically.
+spring.jpa.hibernate.ddl-auto=update
+# Enables logging of SQL statements.
+spring.jpa.show-sql=true
+#Configures Hibernate to use the MySQL dialect.
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
