--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #Configures Hibernate to use the MySQL dialect.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+# APIS Configuration
+support.api.url=${API_SUPPORT_URL:http://localhost:8081}
