--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-# Application name
-spring.application.name=projects
+# Application
+spring.application.name=support
+server.port=8081
 
 # DevTools
 spring.devtools.livereload.enabled=false
@@ -15,9 +16,9 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/projects
-spring.datasource.username=${MYSQL_USER:projects}
-spring.datasource.password=${MYSQL_PASSWORD:projects}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3307}/${MYSQL_DATABASE:support}
+spring.datasource.username=${MYSQL_USER:support}
+spring.datasource.password=${MYSQL_PASSWORD:support}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Hibernate Configuration
@@ -31,4 +32,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 # APIS Configuration
-support.api.url=${API_SUPPORT_URL:http://localhost:8081}
+projects.api.url=${API_PROJECTS_URL:http://localhost:8080}
