--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.port=8081
 spring.devtools.livereload.enabled=false
 
 # Swagger UI
+springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 # Error handling
