feat(app): security cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ springdoc.swagger-ui.enabled=true
 
 # Error handling
 server.error.include-stacktrace=never
+logging.level.org.springframework.security.web.DefaultSecurityFilterChain=OFF
 
 # Logging
 logging.level.org.springframework.web=DEBUG
