feat: create task with all necessaries fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 # APIS Configuration
-projects.api.url=${API_PROJECTS_URL:http://localhost:8080}
+projects.api.url=https://psa-projects-production.up.railway.app
